[package]
name = "qiniu"
version = "0.1.0"
authors = ["Wang Xuerui <git@xen0n.name>"]

[dependencies]
base64 = "0.7.0"
bytes = "0.4.5"
error-chain = "0.11.0"
futures = "0.1.16"
hyper = "0.11.2"
hyper-tls = "0.1.2"
ring = "0.12.1"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
url = "1.5.1"

tokio-core = "0.1.9"
